# tx

./: 404.html  README.md  contributing.md~  index.html  index.md~  mkdocs.yml  pyproject.toml  reference.md~
.github/workflows/: pytest.yaml
contributing/: index.html
docs/: contributing.md  index.md  reference.md
docs/running/: gpus.md  tpus.md
reference/: index.html
running/gpus/: index.html
running/tpus/: index.html
search/: search_index.json
tests/models/: test_qwen3.py
tests/tinker/: test_api.py
tx/layers/: lora.py
tx/loaders/: __init__.py  chat.py  common.py  text.py
tx/models/: __init__.py  qwen3.py  qwen3_moe.py
tx/run/: main.py  train.py
tx/tinker/: api.py  engine.py  models.py  server.py
tx/utils/: log.py  lora.py  models.py
xtrain/: utils.py
xtrain/models/: __init__.py  mnist.py  qwen3.py
xtrain/run/: main.py  sft.py  train.py
